[package]
name = "ggez-sandspiel"
version = "0.1.0"
authors = ["Gilbert Röhrbein"]
edition = "2018"
license = "MIT"

[lib]
doctest = false
test = false

[[bin]]
name = "ggez-sandspiel"
test = false

[dependencies]
rand = "0.7.3"
gfx = "0.18.2"

[dependencies.ggez]
version = "0.5.1"
default-features = false